# gunflows

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.sh  setup_nosubshell.sh
apps/: mcmc.py  sample.py  train.py
bash/: README.md  gaussian_ess.sh  generate_first_datasets.sh  inspect_npz.py  job_sample_from_covariance_asimov.sh  job_sample_from_covariance_data.sh  job_sample_from_covariance_fds.sh  job_sample_from_covariance_toy.sh  make_paper_plots.sh  make_paper_plots_cpu.sh  make_paper_plots_private.sh  plot_ess.sh  predict_histograms.sh  predict_sensitivity.sh  run_check_dataset.sh  run_check_lh_shift.sh  run_compare_mcmc_nf_toy.sh  run_effective_sample_size.sh  run_mcmc.sh  run_mcmc_noDet.sh  run_mcmc_noDet_seeded.sh  run_mcmc_pygundam_long.sh  run_mcmc_pygundam_nodet.sh  run_mcmc_toyfit.sh  run_nf_eval_at_mcmc.sh  run_profiles.sh  run_profiles_nodet.sh  run_sample_throughput.sh  run_sample_throughput_cpu.sh  run_sample_throughput_dim_sweep.sh  sample_and_compare.sh  sample_and_compare_v2.sh  sample_and_compare_v3.sh  train_demonstrator_asimov.sh  train_demonstrator_fakedata.sh  train_demonstrator_toyfit.sh  train_gunflows.sh  train_gunflows_data.sh  train_gunflows_fds.sh  train_gunflows_toy.sh  (+6 more)
configs/: config.yaml  config_toy.yaml  effective_sample_size.yaml  gaussian_ess.yaml  make_paper_plots.yaml  mcmc.yaml  mcmc_pygundam.yaml  plot_ess.yaml  predict_histograms.yaml  predict_histograms_local.yaml  predict_sensitivity.yaml  sample.yaml  sample_data.yaml  sample_fds.yaml  sample_mcmc_nf_toyOA.yaml  sample_throughput.yaml
demonstrator_scripts/: job_sample_from_covariance_asimov.sh  run_check_dataset.sh  run_fit_in_container.sh  run_profiles.sh  run_toy_mcmc.sh  start_image.sh  submit_fit_in_container.sh
examples/: example_with_gundam.ipynb  toy_llh_walkthrough.ipynb
hparam_tuning/: backfill_from_runs.py  diagnostics.py  launch_tuning.sh  merge_stage.py  run_array.sh  search_space.yaml  worker.py
logs/: gundam_mcmc_7798393.err  gundam_mcmc_7798393.out  sample_nf_mcmc_toy_7785985.err  sample_nf_mcmc_toy_7785985.out
setup_scripts/: clean_and_reinstall_pygundam.sh  install_pygundam_baobab.sh  reinstall_pygundam.sh  setup_pygundam.sh  (+1 more)
(+159 files in other folders)
